// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APD files endpoints Upload a file associated with an APD | POST /apds/:id/files when authenticated as a user with permission with a non-existant apd ID 1`] = `""`;

exports[`APD files endpoints Upload a file associated with an APD | POST /apds/:id/files when authenticated as a user with permission with a valid request (gif) 1`] = `
Object {
  "url": "/apds/eeac3c9865059f26eccb0600/files/42c8716dc8ee5dbeefc7492fe38792f8f6e2c2434b9ef1e9ddc3e9619eba6c8c",
}
`;

exports[`APD files endpoints Upload a file associated with an APD | POST /apds/:id/files when authenticated as a user with permission with a valid request (jpg) 1`] = `
Object {
  "url": "/apds/eeac3c9865059f26eccb0600/files/5885fa3767a2b6079141bf99976d989455f8c36d1e9be115aa97012ffd3c41fa",
}
`;

exports[`APD files endpoints Upload a file associated with an APD | POST /apds/:id/files when authenticated as a user with permission with a valid request (tiff) 1`] = `
Object {
  "url": "/apds/eeac3c9865059f26eccb0600/files/9402d9428aeade0a21877c897ae4e4b2131360e83f92dc04b36e30eae9961271",
}
`;

exports[`APD files endpoints Upload a file associated with an APD | POST /apds/:id/files when authenticated as a user with permission with an APD in a state other than the user's state 1`] = `""`;

exports[`APD files endpoints Upload a file associated with an APD | POST /apds/:id/files when authenticated as a user with permission with an APD that is not in draft 1`] = `""`;
